# StereoFlouroscopyRegistration

./: .gitignore  README.md  Test  environment.yml  setup.py  sfr.py  sfr_visualize.py
Registration/DRR Generation/Python/: DRR.py  Functions.py
StereoFlouroscopyRegistration/: README.md  __init__.py
StereoFlouroscopyRegistration/WriteHeader/: calibration.py  calibration_tool.py
StereoFlouroscopyRegistration/cli/: __init__.py  cli.py
StereoFlouroscopyRegistration/cli/create/: __init__.py  create.py  create_example_df_data.py
StereoFlouroscopyRegistration/cli/drr/: __init__.py  calibration_joint_track.py  drr.py
StereoFlouroscopyRegistration/cli/drr/drr_example/: Main_DRR_Example.py  Main_DRR_Knee_Example.py  Main_DRR_Spine_Example.py  README.md  Scrapbook.py  Script_Filters.py  Script_Libraries.py  Script_RayCastInterpolator.py  Script_Reader.py  Script_SetCalibrationInfo.py  Script_StandardizeImageDirection.py  Script_Transformation.py  Script_WriteImage.py  Script_WriteTransformedVol.py  cal_cam1.txt  knee_cal_cam1.txt  knee_cal_cam2.txt  spine_cal_cam1.txt  spine_cal_cam2.txt
StereoFlouroscopyRegistration/cli/init/: __init__.py  init.py  initialize_df_reg.py
StereoFlouroscopyRegistration/cli/util/: __init__.py  util.py  util_dicom.py
StereoFlouroscopyRegistration/cli/visualize/: __init__.py  df_scene_visualizer.py  image_visualizer.py  visualize.py
StereoFlouroscopyRegistration/drr/: CalibrationUsingJointTrack.py  DRR.py  Functions.py  MainScript_UsageExample.py  __init__.py
StereoFlouroscopyRegistration/drr/Cpp/: CMakeLists.txt  DRR.cxx
StereoFlouroscopyRegistration/io/: __init__.py  read_image.py
StereoFlouroscopyRegistration/pipelines/: __init__.py  base_pipeline.py  df_scene_visualizer_pipeline.py  image_slice_visualizer.py  image_slice_visualizer_pipeline.py
StereoFlouroscopyRegistration/reg/3D2DRegistration/CppImplementation/RigidBodyTransformation/: CMakeLists.txt  ImageConvert.cxx  RotTranslate.cxx
StereoFlouroscopyRegistration/reg/3D2DRegistration/CppImplementation/src/: ImageCompare.cxx
StereoFlouroscopyRegistration/reg/3D2DRegistration/PythonImplementation/: ImageCompare.py  __init__.py
StereoFlouroscopyRegistration/reg/3D2DRegistration/PythonImplementation/SupportingDocs/CameraCalibrationInfo/: JointTrackCalibration.txt
StereoFlouroscopyRegistration/reg/Visualization/: axesDisplay.py
StereoFlouroscopyRegistration/reg/src/: CMakeLists.txt
StereoFlouroscopyRegistration/reg/src/Examples/: MultiImageRegistration.cxx
StereoFlouroscopyRegistration/util/: __init__.py  itk_helpers.py  version.py  vtk_helpers.py
StereoFlouroscopyRegistration/visualization/: __init__.py  visualize.py  xray_visualizer.py
pip/: long_description.rst
tests/io/read_image/: test_get_itk_homogeneous_coordinate_matrix.py  test_get_itk_image_type.py  test_get_vtk_reader_from_file_name.py
tests/util/itk_helpers/: test_create_itk_image.py  test_create_itk_image_region.py  test_set_itk_image_direction.py  test_set_itk_image_origin.py
tests/util/version/: test_format_version.py
tests/util/vtk_helpers/: test_GetRGBAColor.py  test_GetRGBColor.py  test_create_vtkMatrix4x4.py
